# foundry

./: Cargo.toml
crates/anvil/: Cargo.toml
crates/anvil/reth-bridge/: Cargo.toml
crates/anvil/reth-bridge/src/: backend.rs  convert.rs  lib.rs  network.rs  provider.rs
crates/anvil/reth-bridge/tests/: integration.rs  smoke.rs
crates/anvil/src/eth/: api.rs  mod.rs  reth_api.rs
crates/anvil/src/eth/backend/: mod.rs  view.rs
crates/anvil/src/eth/backend/mem/: mod.rs
crates/evm/core/src/: evm.rs
crates/evm/evm/src/inspectors/: create2.rs  mod.rs  stack.rs
