[package]
name = "anvil-reth-bridge"
description = "Bridge between anvil's in-memory backend and reth's RPC trait interfaces"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# foundry
anvil-core = { path = "../core" }
foundry-evm = { path = "../../evm/evm" }
foundry-primitives = { path = "../../primitives" }

# reth
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-primitives-traits = "0.2.0"
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-db-models = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "c20d897ef" }

# alloy
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true

# revm
revm.workspace = true
revm-database = "12.0.0"

# misc
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
anvil = { path = ".." }
tokio = { workspace = true, features = ["full"] }
alloy-rpc-types.workspace = true
alloy-serde.workspace = true
